@@ -314,6 +314,7 @@ AC_ARG_WITH(modules,
   ],
   [
     ac_static_modules=`echo "$withval" | sed -e 's/:/.o /g'`.o ;
+
     for amodule in $ac_static_modules; do
       ac_build_static_modules="modules/$amodule $ac_build_static_modules"
     done
@@ -1006,7 +1007,7 @@ fi
 
 AC_CHECK_HEADERS(bstring.h crypt.h ctype.h execinfo.h iconv.h inttypes.h langinfo.h limits.h locale.h)
 AC_CHECK_HEADERS(string.h strings.h stropts.h)
-AC_CHECK_HEADERS(sys/file.h sys/mman.h sys/types.h sys/uio.h)
+AC_CHECK_HEADERS(sys/file.h sys/mman.h sys/types.h sys/ucred.h sys/uio.h)
 
 dnl These particular checks are done a little differently because on some
 dnl platforms, <sys/mount.h> wants <sys/param.h> to be included first.
@@ -1312,6 +1313,7 @@ esac])
 
 dnl Controls
 if test x"$enable_ctrls" = xyes; then
+  AC_CHECK_FUNCS(getpeereid)
   ac_static_modules="$ac_static_modules mod_ctrls.o"
   ac_build_static_modules="$ac_build_static_modules modules/mod_ctrls.o"
 fi
@@ -1321,6 +1323,35 @@ if test x"$enable_nls" = xyes; then
   ac_static_modules="$ac_static_modules mod_lang.o"
   ac_build_static_modules="$ac_build_static_modules modules/mod_lang.o"
 fi
+
+dnl Controls-related checks
+AC_CHECK_MEMBER(struct cmsgcred.cmcred_uid,
+  [AC_DEFINE(HAVE_STRUCT_CMSGCRED)],,
+  [
+    #if HAVE_SYS_TYPES_H
+    # include <sys/types.h>
+    #endif
+    #if HAVE_SYS_SOCKET_H
+    # include <sys/socket.h>
+    #endif
+    #if HAVE_SYS_UIO_H
+    # include <sys/uio.h>
+    #endif
+  ])
+
+AC_CHECK_MEMBER(struct sockcred.sc_uid,
+  [AC_DEFINE(HAVE_STRUCT_SOCKCRED)],,
+  [
+    #if HAVE_SYS_TYPES_H
+    # include <sys/types.h>
+    #endif
+    #if HAVE_SYS_SOCKET_H
+    # include <sys/socket.h>
+    #endif
+    #if HAVE_SYS_UIO_H
+    # include <sys/uio.h>
+    #endif
+  ])
 
 dnl IPv4/IPv6-related checks
 AC_CHECK_MEMBER(struct sockaddr_in.sin_len,
