@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.850 2007-10-09 17:30:38 castaglia Exp $
+$Id: NEWS,v 1.851 2007-10-11 02:31:56 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -31,6 +31,7 @@ CVS
 - Bug 2982 - Support limit on number of simultaneous file transfers from one
   client.  Two new configuration directives, MaxTransfersPerHost and
   MaxTransfersPerUser, have been added.
+- Bug 2386 - Controls should use kernel-enforced credentials where possible.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
